Setting a sensible minimum size for plasmawindowed

Summary:
plasmawindowed didn't set any minimum size to its window,
so it could be resized unusably small.
it tried to find its attached Layout, but the attached property
object wasn't created.
now set the minimum size by the following heiristics:
* if there is a switchsize, set it to switch to full representation
* then take the full representation minimum size if available and bigger then switch size
* otherwise, set it as SizeEnormous icon size
* in any case, don't let the window be less than that

BUG:376277

Test Plan:
tried both an applet that exports a layout and ful lrepresentation (kickoff)
and an applet that wants to stay collapsed (analog clock) kickoff
stays expanded at a reasonable minimum size, the clock can be scaled down
to 128x128

Reviewers: #plasma, broulik

Reviewed By: #plasma, broulik

Subscribers: broulik, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D5235