plasma-windowed/plasmawindowedview.h
@@ -58,6 +58,8 @@ private:
     Plasma::Applet *m_applet;
     QPointer<QObject> m_layout;
     QPointer<PlasmaQuick::ConfigView> m_configView;
+    QPointer<QQuickItem> m_rootObject;
+    QPointer<QQuickItem> m_appletInterface;
     KStatusNotifierItem* m_statusNotifier;
     bool m_withStatusNotifier;
 };
